Commit 5: Minor tweaks + submission preprations
Signed-off-by: taranrai96 <taranrai96@gmail.com>

--- a/app/src/main/res/values-b+es/strings.xml
+++ b/app/src/main/res/values-b+es/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name">ChrisKwon_TaranRai</string>
     <string name="conversion_prompt">elegir el tipo de conversión</string>
     <string-array name="conversion_array">
         <item>Kilómetros a Millas</item>
